# performer

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  abjad_notebook.py  pyproject.toml  requirements.txt  setup.py
.dvc/: config
.github/workflows/: test.yml
checkpoints/: .gitignore  cello_baseline.ckpt.dvc  cello_longrun.ckpt.dvc  drums_baseline.ckpt.dvc  flute_baseline.ckpt.dvc  flute_longrun.ckpt.dvc  violin_baseline.ckpt.dvc  violin_longrun.ckpt.dvc
configs/: eval.yaml  train.yaml
configs/callbacks/: ddsp.yaml  default.yaml  early_stopping.yaml  model_checkpoint.yaml
configs/datamodule/: ddsp.yaml
configs/debug/: overfit.yaml
configs/experiment/: 16-bit.yaml  baseline.yaml  (+1 more)
data/: .gitignore  cello_samples.pth.dvc  cifar-10-batches-py.dvc  drum_samples.pth.dvc  flute_samples.pth.dvc  violin_samples.pth.dvc
notebooks/: CanisMajoris2022-Flute I.notes  CanisMajoris2022-Flute II.notes  CanisMajoris2022-Flute III.notes  CanisMajoris2022-Flute IV.notes  CanisMajoris2022-Flute V.notes  CanisMajoris2022-unnamed-staff.notes  CanisMajoris2022.ipynb  CanisMajoris2022.ly  CanisMajoris2022.midi  Data exploration.ipynb  Gratias, Deo.ipynb  Materials.ipynb  Sesin Yolculugu 2023.ipynb  Test saved model.ipynb  Update fft_conv.ipynb  Using Abjad.ipynb  event-listener.ly  flute_one.ly  flute_two.ly  instruments.ily  prepare realtime components.ipynb
performer/: canis.py  materials.py  run.py  ui.py
scripts/: schedule.sh
src/: run.py  ui.py
tests/: test_eval.py  test_mnist_datamodule.py  test_sweeps.py  test_train.py
(+82 files in other folders)
